# claw-parade

./: .dockerignore  .gitignore  .gitmodules  AI_ENHANCEMENTS.md  Dockerfile  README.md  SKILLS.md  SOUL.md  WORKFLOW.md  docker-compose.yml  install-abra.sh
skills/aesthetic-selection/: SKILL.md
skills/alt/: SKILL.md  pyproject.toml
skills/audio-separation/: SKILL.md  config.json  pyproject.toml
skills/audio-transcription/: SKILL.md  pyproject.toml
skills/bg-removal/: SKILL.md
skills/bg-removal/scripts/: rembg_batch.py
skills/brand-awareness/: SKILL.md
skills/brand-awareness/brand-assets/: asset-manifest.json
skills/buffer/: SKILL.md
skills/buffer/scripts/: _client.py  channels.py  ideas.py  organizations.py  posts.py  pyproject.toml
skills/canva/: SKILL.md  app.py
skills/cutlab/: SKILL.md  config.json  pyproject.toml
skills/cutlab/scripts/: vace.py
skills/demix/: SKILL.md
skills/demix/scripts/: separate.py
skills/depth-bokeh/: SKILL.md  pyproject.toml
skills/depth-bokeh/scripts/: bokeh.py
skills/filter/: SKILL.md
skills/frame-interpolation/: SKILL.md
skills/frame-interpolation/scripts/: interpolate.py
skills/grade/: SKILL.md  config.json  pyproject.toml
skills/grade/scripts/: score.py
skills/image-processing/: SKILL.md
skills/image-to-video/: SKILL.md  config.json
skills/keyer/: SKILL.md  config.json  pyproject.toml
skills/knockout/: SKILL.md  config.json  pyproject.toml
skills/liven/: SKILL.md  pyproject.toml
skills/liven/scripts/: img2vid.py
skills/music-gen/: SKILL.md  config.json  pyproject.toml
skills/music-gen/scripts/: generate_music.py
skills/mux/: SKILL.md
skills/persona/: SKILL.md
skills/persona/scripts/: brand_assets.py
skills/portrait/: SKILL.md  config.json  pyproject.toml
skills/portrait-animation/: SKILL.md  config.json  pyproject.toml
skills/portrait-animation/scripts/: portrait.py
skills/render/: SKILL.md  pyproject.toml
skills/score/: SKILL.md
skills/score/scripts/: generate_music.py
skills/snip/: SKILL.md  config.json
skills/text-to-image/: SKILL.md  config.json
skills/text-to-image/scripts/: txt2img.py
skills/tween/: SKILL.md  config.json  pyproject.toml
skills/tween/scripts/: interpolate.py
skills/verbatim/: SKILL.md  config.json
skills/verbatim/scripts/: transcriber.py
skills/video-cutting/: SKILL.md  config.json  pyproject.toml
skills/video-cutting/scripts/: cutter.py
skills/video-editing/: SKILL.md  config.json  pyproject.toml
skills/video-editing/scripts/: vace.py
skills/video-matting/: SKILL.md
skills/video-matting/scripts/: matte.py
skills/video-processing/: SKILL.md
skills/vision-caption/: SKILL.md  config.json  pyproject.toml
skills/vision-caption/scripts/: describe.py
tests/: .gitignore  conftest.py  pyproject.toml  pytest.ini  test_audio_tools.py  test_audio_transcription.py  test_generative.py  test_image_tools.py  test_txt2img.py  test_video_cutting.py  test_video_tools.py
tests/utils/: download_models.py
