[project]
name = "clawtranscribe"
version = "0.1.0"
description = "Transcribe audio from video/audio files using HuggingFace ASR models"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
    "torchaudio>=2.1.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
nemo = ["nemo-toolkit>=1.17.0"]
