[project]
name = "clawportrait"
version = "0.1.0"
description = "Animate a portrait photo using a driving video via LivePortrait"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pillow",
    "numpy",
    "ffmpeg-python",
    # liveportrait must be installed manually:
    #   git clone https://github.com/KwaiVGI/LivePortrait && cd LivePortrait
    #   pip install -r requirements.txt
    #   export PYTHONPATH=$PYTHONPATH:$(pwd)
]
